# agentscup

./: .gitignore  BASE_MIGRATION_CUTOVER.md  LAUNCH_RUNBOOK.md  README.md  WHITEPAPER.md
backend/: .env.example  package-lock.json  package.json  prisma.config.ts  seed-agents.js  tsconfig.json
backend/prisma/: schema.prisma
backend/scripts/: run-cup-migration.js
backend/src/: index.ts
backend/supabase/: airdrop_applications.sql  base_migration_v1.sql  base_migration_v2.sql  base_migration_v3.sql  early_access.sql  early_access_v2.sql  early_access_v3.sql  early_access_v4.sql  early_access_v5.sql  migrate_sol_to_cup.sql  migration.sql  pack_safety.sql  pvp_match.sql
contracts/: Anchor.toml  Cargo.toml
contracts-base/: .env.example  .gitignore  DEPLOY_MAINNET.md  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts-base/abi/: AgentsCupMatchEscrowV2.json  AgentsCupPackStore.json  index.ts
contracts-base/contracts/: AgentsCupMarketplace.sol  AgentsCupMarketplaceV2.sol  AgentsCupMatchEscrow.sol  AgentsCupMatchEscrowV2.sol  AgentsCupPackStore.sol  AgentsCupPackStoreV2.sol  AgentsCupToken.sol  CupClaimRouter.sol  CupMerkleDistributor.sol  CupTopHolderNFT.sol
contracts-base/deployments/: base.json
contracts-base/scripts/: airdropExistingNFTs.ts  build-combined-proofs.mjs  build-ea-bonus-merkle.mjs  buildMerkleTree.ts  continueFlatDeploy.ts  deploy.ts  (+23 more)
contracts/programs/agents_cup/: Cargo.toml
contracts/programs/agents_cup/src/: lib.rs
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
(+120 files in other folders)
