[package]
name = "agents-cup"
version = "0.1.0"
description = "Agents Cup — Solana smart contracts for pack purchases, marketplace, and match stakes"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agents_cup"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
